--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "dependencies": {
     "dotenv": "^16.2.0",
     "jsonwebtoken": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.22"
   }
 }
