--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "authj",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "authentication using JWT",
   "main": "index.js",
   "type": "module",
@@ -11,6 +11,14 @@
     "type": "git",
     "url": "https://github.com/sivakrishnacode/authj"
   },
+  "keywords": [
+    "authj",
+    "jwt",
+    "Authentication",
+    "token",
+    "security",
+    "ESM"
+  ],
   "author": "sivakrishna <sivakrishnacoc@gmail.com>",
   "license": "ISC",
   "dependencies": {
